apps/bookinfo/edge/virtualservices/3b-bookinfo-tls-multi-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo-vs
  namespace: gloo-system
spec:
# ------------------- secure TLS -------------------
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
# --------------------------------------------------
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
# ------------------- traffic splitting -------------------
            multi:
                destinations:
                - weight: 5
                  destination:
                      upstream:
                          name: bookinfo-v1-productpage-9080
                          namespace: gloo-system
                - weight: 5
                  destination:
                      upstream:
                          name: bookinfo-beta-productpage-9080
                          namespace: gloo-system
